[package]
name = "rust-pipeline-utils"
version = "0.1.0"
edition = "2021"
description = "High-performance pipeline utilities for UE5/VFX asset workflows"
license = "MIT"
authors = ["MMKPC Studios <mmkpc@mmkpcstudios.com>"]

[[bin]]
name = "pipeline"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
blake3 = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
